# twin-edge-from-osu

./: .gitignore  Cargo.toml  LICENSE  README.md  wasm.bat
public/: index.html
public/pkg/: osu_to_te.js  osu_to_te_bg.wasm
public/s/: main.js  style.css
public/s/font/: Aller.css
public/templates/: description.html  head.html  impact.html  modeselect.html  play.html  template.html
src/: convert.rs  lib.rs  oldmain.rs
src/osu/: download.rs  mod.rs
src/te/: map.rs
