[package]
edition = "2021"
name = "osu_to_te"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
image = "0.24"
osuparse = "2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4"

# wasm dependencies
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = {version = "0.3", features = [
  "Document",
  "Window",
  "Element",
  "HtmlInputElement"
]}
